# behavioral-model

.github/workflows/: bazel.yml
src/bm_apps/: BUILD.bazel  notifications.cpp  packet_pipe.cpp
targets/pna_nic/: BUILD.bazel
targets/pna_nic/tests/: BUILD.bazel
targets/psa_switch/: BUILD.bazel
targets/psa_switch/tests/: BUILD.bazel
targets/test_utils/: BUILD.bazel
tests/: BUILD.bazel
