# SPDX-FileCopyrightText: 2026 Yuao Ma
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "pnanic",
    srcs = [
        "externs/pna_counter.cpp",
        "externs/pna_hash.cpp",
        "externs/pna_internet_checksum.cpp",
        "externs/pna_meter.cpp",
        "externs/pna_random.cpp",
        "pna_nic.cpp",
        "primitives.cpp",
    ],
    hdrs = [
        "externs/pna_counter.h",
        "externs/pna_hash.h",
        "externs/pna_internet_checksum.h",
        "externs/pna_meter.h",
        "externs/pna_random.h",
        "pna_nic.h",
    ],
    includes = ["."],
    deps = [
        "//:bm_headers",
        "//src/BMI:bmi",
        "//src/bm_sim:bmsim",
        "@jsoncpp",
    ],
)
