# SPDX-FileCopyrightText: 2026 Yuao Ma
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "test_utils",
    srcs = ["utils.cpp"],
    hdrs = ["utils.h"],
    includes = ["."],
    deps = ["@nanomsg"],
)
