# SPDX-FileCopyrightText: 2026 Yuao Ma
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "test_parse_pna",
    srcs = [
        "main.cpp",
        "test_parse_pna.cpp",
    ],
    data = glob(["testdata/**"]),
    defines = ["TESTDATADIR=\\\"" + package_name() + "/testdata\\\""],
    deps = [
        "//src/bm_apps:bmapps",
        "//targets/pna_nic:pnanic",
        "//targets/test_utils:test_utils",
        "@googletest//:gtest",
    ],
)
