# SPDX-FileCopyrightText: 2026 Yuao Ma
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "test_common",
    srcs = ["main.cpp"],
    deps = [
        "//src/bm_apps:bmapps",
        "//targets/psa_switch:psaswitch",
        "@googletest//:gtest",
    ],
)

[
    cc_test(
        name = test,
        srcs = [test + ".cpp"],
        deps = [":test_common"],
    )
    for test in [
        "test_hash",
        "test_internet_checksum",
    ]
]
